// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MMM-soccer has correct defaults 1`] = `
{
  "api_key": false,
  "colored": false,
  "focus_on": false,
  "leagues": {
    "ENGLAND": "PL",
    "FRANCE": "FL1",
    "GERMANY": "BL1",
    "ITALY": "SA",
    "SPAIN": "PD",
  },
  "logos": false,
  "max_teams": false,
  "show": "GERMANY",
}
`;

exports[`MMM-soccer has correct voice commands 1`] = `
{
  "mode": "SOCCER",
  "sentences": [
    "OPEN HELP",
    "CLOSE HELP",
    "SHOW STANDINGS OF COUNTRY NAME",
    "EXPAND VIEW",
    "COLLAPSE VIEW",
  ],
}
`;

exports[`MMM-soccer notificationReceived executes voice commands 1`] = `
[
  "OPEN_MODAL",
  {
    "data": {
      "fns": {
        "translate": [Function],
      },
      "mode": "SOCCER",
      "sentences": [
        "OPEN HELP",
        "CLOSE HELP",
        "SHOW STANDINGS OF COUNTRY NAME",
        "EXPAND VIEW",
        "COLLAPSE VIEW",
      ],
    },
    "template": "templates/HelpModal.njk",
  },
]
`;

exports[`MMM-soccer notificationReceived registers voice commands 1`] = `
[
  "REGISTER_VOICE_MODULE",
  {
    "mode": "SOCCER",
    "sentences": [
      "OPEN HELP",
      "CLOSE HELP",
      "SHOW STANDINGS OF COUNTRY NAME",
      "EXPAND VIEW",
      "COLLAPSE VIEW",
      "GERMANY FRANCE ENGLAND SPAIN ITALY",
    ],
  },
]
`;
